--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-streamlit==1.28.0
-pandas==1.5.3
-scikit-learn==1.3.0
-matplotlib==3.7.1
-plotly==5.18.0
-numpy==1.24.4
-nltk==3.8.1
-spacy==3.6.0
-openpyxl==3.1.2
-python-docx==1.1.0
-PyMuPDF==1.23.6
-reportlab==3.6.12
-faker==19.13.0
-textblob==0.17.1
-fpdf==1.7.2
+streamlit
+pandas
+scikit-learn
+matplotlib
+plotly
+numpy
+nltk
+spacy
+openpyxl
+python-docx
+PyMuPDF
+reportlab
+faker
+textblob
+fpdf
